# fastapi-admin

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.en.md  README.md  deploy.sh  package.json  pnpm-lock.yaml
backend/: README.md  banner.txt  main.py  pyproject.toml  requirements.txt
backend/app/: init_app.py
backend/app/alembic/versions/: 001_multi_tenant_init.py  002_add_client_to_sys_menu.py  0306640395d9_v3_1_0_add_plugin_system.py  06ee34c848a2_v3_1_0_multi_tenant_init.py  2fb31000fb5b_v3_1_0_add_sys_ticket.py  cf3ef35abed3_v3_1_0_p1_tenant_features.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/module_common/: __init__.py
backend/app/api/v1/module_common/file/: controller.py  schema.py  service.py
backend/app/api/v1/module_common/monitoring/: __init__.py  health.py  metrics.py  schema.py
backend/app/api/v1/module_monitor/cache/: controller.py  schema.py  service.py
backend/app/api/v1/module_monitor/online/: controller.py  schema.py  service.py
backend/app/api/v1/module_monitor/resource/: controller.py  schema.py  service.py
backend/app/api/v1/module_monitor/server/: controller.py  service.py
backend/app/api/v1/module_platform/: __init__.py
backend/app/api/v1/module_platform/email/: controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/v1/module_platform/invoice/: controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/v1/module_platform/loginlog/: __init__.py  controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/v1/module_platform/menu/: controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/v1/module_platform/order/: controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/v1/module_platform/package/: controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/v1/module_platform/plugin/: controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/v1/module_platform/self_service/: controller.py  schema.py  service.py
backend/app/api/v1/module_platform/tenant/: controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/v1/module_platform/ticket/: controller.py  model.py  schema.py  service.py
backend/app/api/v1/module_system/: __init__.py
backend/app/api/v1/module_system/auth/: controller.py  oauth_service.py  schema.py  service.py
backend/app/api/v1/module_system/dept/: controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/v1/module_system/dict/: controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/v1/module_system/log/: controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/v1/module_system/menu/: controller.py  model.py  schema.py
backend/app/api/v1/module_system/notice/: controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/v1/module_system/operationlog/: __init__.py  controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/v1/module_system/params/: controller.py  model.py  schema.py  service.py
backend/app/api/v1/module_system/plugin/: controller.py  model.py  schema.py  service.py
backend/app/api/v1/module_system/position/: controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/v1/module_system/role/: controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/v1/module_system/tenant/: controller.py  model.py  schema.py  service.py
backend/app/common/: constant.py  enums.py  response.py
backend/app/config/: setting.py
backend/app/core/: ap_scheduler.py  auth_schema.py  base_crud.py  base_model.py  base_params.py  base_schema.py  database.py  dependencies.py  di.py  discover.py  exceptions.py  generic_service.py  logger.py  middlewares.py  permission.py  router_class.py  security.py  tenant.py  tenant_filter.py  tenant_middleware.py
backend/app/core/context/: request_context.py
backend/app/core/middleware/: correlation.py  security_headers.py
backend/app/core/payment/: __init__.py  alipay.py  base.py  mock.py
backend/app/plugin/module_ai/chat/: controller.py  crud.py  schema.py  service.py  utils.py  ws.py
backend/app/plugin/module_example/demo/: controller.py  model.py  schema.py  service.py
backend/app/plugin/module_example/demo01/: controller.py  model.py  service.py
backend/app/plugin/module_generator/gencode/: controller.py  crud.py  model.py  schema.py  service.py
backend/app/scripts/: init_app.py  initialize.py
backend/app/scripts/data/: example_demo.json  platform_email_template.json  platform_invoice.json  platform_login_log.json  platform_menu.json  platform_order.json  platform_package.json  platform_package_menu.json  platform_payment_record.json  platform_plugin.json  platform_refund.json  platform_tenant.json  platform_tenant_plugin.json  platform_ticket.json  platform_user_tenant.json  sys_dept.json  sys_dict_data.json  sys_dict_type.json  sys_login_log.json  sys_menu.json  sys_notice.json  sys_notice_read.json  sys_operation_log.json  sys_param.json  sys_position.json  sys_role.json  sys_tenant_config.json  sys_ticket.json  sys_user.json  sys_user_roles.json  task_node.json
backend/app/utils/: banner.py  common_util.py  console.py  email_util.py  hash_bcrpy_util.py  ip_local_util.py  upload_util.py
backend/env/: .env.dev.example  .env.prod.example
backend/sql/mysql/: fastapiadmin_2026-06-17_001720.sql
backend/sql/postgres/: fastapiadmin_2026-06-17_002148.sql
backend/tests/: conftest.py  test_main.py  test_platform_modules.py  test_smoke.py  test_system_modules.py  test_unit.py
(+540 files in other folders)
